--- a/index.html
+++ b/index.html
@@ -1,35 +1,78 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>My Page</title>
-</head>
-<body>
-	<h1>Bakery Shop</h1>
-	<p>Hello!<br><br>This is Ayush Purwar</p>
-	<hr>
 
-	<ol>
-		<li>Cake</li>
-		<ul>
-			<li>Vanilla</li>
-			<li>Butterscotch</li>
-		</ul>
-		<li>Biscuits</li>
-	</ol>
-	<a href="https://www.amerbakeryhut.com/" target="_blank">
-		Bakery Page
-	</a>
+<head>
+	<title>Music</title>
+	<link rel="stylesheet" type="text/css" href="index.css">
+</head>
+
+<body>
+	<span class="nav">
+		<span class="logo"><h1>Music</h1></span>
+		<span class="navbar-items"> 
+			<a href= "/" class="nav-item">Home</a>
+			<a href= "/" class="nav-item">About</a>
+			<a href= "/" class="nav-item">Contact Us</a>
+		</span>
+	</span>
 	<br><br>
 
-	<form>
-		<label>Name</label>
-		<input type="name" name="name">
-		<br><br>
-		<label>Email</label>
-		<input type="email" name="email">
-		<br><br>
-		<input type="submit" value="submit">
+	<p class="intro">
+		<img class="mike" src="Music.jpg" alt="Music">
+	Music is the art of arranging sounds in time to produce a composition through the elements of melody, harmony, rhythm, and timbre.[1] It is one of the universal cultural aspects of all human societies. General definitions of music include common elements such as pitch (which governs melody and harmony), rhythm (and its associated concepts tempo, meter, and articulation), dynamics (loudness and softness), and the sonic qualities of timbre and texture (which are sometimes termed the "color" of a musical sound). Different styles or types of music may emphasize, de-emphasize or omit some of these elements. Music is performed with a vast range of instruments and vocal techniques ranging from singing to rapping; there are solely instrumental pieces, solely vocal pieces (such as songs without instrumental accompaniment) and pieces that combine singing and instruments.
+	<br><br>
+	In its most general form, the activities describing music as an art form or cultural activity include the creation of works of music (songs, tunes, symphonies, and so on), the criticism of music, the study of the history of music, and the aesthetic examination of music. Ancient Greek and Indian philosophers defined music in two parts: melodies, as tones ordered horizontally, and harmonies as tones ordered vertically. Common sayings such as "the harmony of the spheres" and "it is music to my ears" point to the notion that music is often ordered and pleasant to listen to. However, 20th-century composer John Cage thought that any sound can be music, saying, for example, "There is no noise, only sound."<br><br>
 
-	</form>
+	The creation, performance, significance, and even the definition of music vary according to culture and social context. Indeed, throughout history, some new forms or styles of music have been criticized as "not being music", including Beethoven's Grosse Fuge string quartet in 1825,[4] early jazz in the beginning of the 1900s[5] and hardcore punk in the 1980s.[6] There are many types of music, including popular music, traditional music, art music, music written for religious ceremonies, and work songs such as chanteys. Music ranges from strictly organized compositions—such as Classical music symphonies from the 1700s and 1800s—through to spontaneously played improvisational music such as jazz, and avant-garde styles of chance-based contemporary music from the 20th and 21st centuries.<br><br>
+
+	Music can be divided into genres (e.g., country music) and genres can be further divided into subgenres (e.g., alternative country and country pop are two of the many country subgenres), although the dividing lines and relationships between music genres are often subtle, sometimes open to personal interpretation, and occasionally controversial. For example, it can be hard to draw the line between some early 1980s hard rock and heavy metal. Within the arts, music may be classified as a performing art, a fine art or as an auditory art. Music may be played or sung and heard live at a rock concert or orchestra performance, heard live as part of a dramatic work (a music theater show or opera), or it may be recorded and listened to on a radio, MP3 player, CD player, smartphone or as film score or TV show.<br><br>
+
+	In many cultures, music is an important part of people's way of life, as it plays a key role in religious rituals, rite of passage ceremonies (e.g., graduation and marriage), social activities (e.g., dancing) and cultural activities ranging from amateur karaoke singing to playing in an amateur funk band or singing in a community choir. People may make music as a hobby, like a teen playing cello in a youth orchestra, or work as a professional musician or singer. The music industry includes the individuals who create new songs and musical pieces (such as songwriters and composers), individuals who perform music (which include orchestra, jazz band and rock band musicians, singers and conductors), individuals who record music (music producers and sound engineers), individuals who organize concert tours, and individuals who sell recordings, sheet music, and scores to customers. Even once a song or piece has been performed, music critics, music journalists, and music scholars may assess and evaluate the piece and its performance.</h2>
+
+	<h1>Some Famous Musicians<h1>
+	<div class="menu-items">
+		<div class="item-tile s m l">
+			<img src="./Image/cake.jpg" class="item-img">
+			<div class="item-text">Cakes</div>
+		</div>
+		<div class="item-tile s m l">
+			<img src="./Image/donuts.jpg" class="item-img">
+			<div class="item-text">Donuts</div>
+		</div>
+		<div class="item-tile s m l">
+			<img src="./Image/brownie.jpg" class="item-img">
+			<div class="item-text">Pastries</div>
+		</div>
+		<div class="item-tile s m l">
+			<img src="./Image/drinks.jpg" class="item-img">
+			<div class="item-text">Beverages</div>
+		</div>
+		<div class="item-tile s m l">
+			<img src="./Image/bread.jpg" class="item-img">
+			<div class="item-text">Bread</div>
+		</div>
+		<div class="item-tile s m l">
+			<img src="./Image/table.jpg" class="item-img">
+			<div class="item-text">Sweet Tables</div>
+		</div>
+	</div>
+	<div class="feedback">
+		<h2>Reviews from our Customers!</h2>
+		<p class="quote">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod" - lorem</p>
+		<p class="quote">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!" - epsum</p>
+	</div>
+<div class="footer">
+	<div class="title">Subscribe to our newsletter!</div>
+	<form class="form">
+	<label>Name</label>
+	<input type="text" class="Name" placeholder="Your name"><br>
+	<label>Email</label>
+	<input type="email" placeholder = "abc@gmail.com"><br>
+	<input type="submit" class="button" value="Submit"><br>
+</form>
+</div>
+
 </body>
+
 </html>
