--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
 
 <body>
 	<span class="nav">
-		<span class="logo"><h1>MusicInfo</h1></span>
 		<span class="navbar-items"> 
-			<a href= "/" class="nav-item">Home</a>
+			<a href= "index.html" class="nav-item">Home</a>
 			<a href= "/" class="nav-item">About</a>
 			<a href= "/" class="nav-item">Contact Us</a>
 		</span>
 	</span>
 	<br><br>
-
+	<h1 class="musicinfo">MusicInfo</h1>
 	<p class="intro">
 		<img class="mike" src="Music.jpg" alt="Music">
 	Music is the art of arranging sounds in time to produce a composition through the elements of melody, harmony, rhythm, and timbre. It is one of the universal cultural aspects of all human societies. General definitions of music include common elements such as pitch (which governs melody and harmony), rhythm (and its associated concepts tempo, meter, and articulation), dynamics (loudness and softness), and the sonic qualities of timbre and texture (which are sometimes termed the "color" of a musical sound). Different styles or types of music may emphasize, de-emphasize or omit some of these elements. Music is performed with a vast range of instruments and vocal techniques ranging from singing to rapping; there are solely instrumental pieces, solely vocal pieces (such as songs without instrumental accompaniment) and pieces that combine singing and instruments.
@@ -25,39 +24,34 @@
 
 	The creation, performance, significance, and even the definition of music vary according to culture and social context. Indeed, throughout history, some new forms or styles of music have been criticized as "not being music", including Beethoven's Grosse Fuge string quartet in 1825, early jazz in the beginning of the 1900s[5] and hardcore punk in the 1980s. There are many types of music, including popular music, traditional music, art music, music written for religious ceremonies, and work songs such as chanteys. Music ranges from strictly organized compositions—such as Classical music symphonies from the 1700s and 1800s—through to spontaneously played improvisational music such as jazz, and avant-garde styles of chance-based contemporary music from the 20th and 21st centuries.<br><br>
 
-	Music can be divided into genres (e.g., country music) and genres can be further divided into subgenres (e.g., alternative country and country pop are two of the many country subgenres), although the dividing lines and relationships between music genres are often subtle, sometimes open to personal interpretation, and occasionally controversial. For example, it can be hard to draw the line between some early 1980s hard rock and heavy metal. Within the arts, music may be classified as a performing art, a fine art or as an auditory art. Music may be played or sung and heard live at a rock concert or orchestra performance, heard live as part of a dramatic work (a music theater show or opera), or it may be recorded and listened to on a radio, MP3 player, CD player, smartphone or as film score or TV show.<br><br>
+	Music can be divided into genres (e.g., country music) and genres can be further divided into subgenres (e.g., alternative country and country pop are two of the many country subgenres), although the dividing lines and relationships between music genres are often subtle, sometimes open to personal interpretation, and occasionally controversial. For example, it can be hard to draw the line between some early 1980s hard rock and heavy metal. Within the arts, music may be classified as a performing art, a fine art or as an auditory art. Music may be played or sung and heard live at a rock concert or orchestra performance, heard live as part of a dramatic work (a music theater show or opera), or it may be recorded and listened to on a radio, MP3 player, CD player, smartphone or as film score or TV show.</h2>
 
-	In many cultures, music is an important part of people's way of life, as it plays a key role in religious rituals, rite of passage ceremonies (e.g., graduation and marriage), social activities (e.g., dancing) and cultural activities ranging from amateur karaoke singing to playing in an amateur funk band or singing in a community choir. People may make music as a hobby, like a teen playing cello in a youth orchestra, or work as a professional musician or singer. The music industry includes the individuals who create new songs and musical pieces (such as songwriters and composers), individuals who perform music (which include orchestra, jazz band and rock band musicians, singers and conductors), individuals who record music (music producers and sound engineers), individuals who organize concert tours, and individuals who sell recordings, sheet music, and scores to customers. Even once a song or piece has been performed, music critics, music journalists, and music scholars may assess and evaluate the piece and its performance.</h2>
-
-	<hr>
-	<div class="indian">
 	<h1 class="indian-singer">Some Famous Indian Singers<h1>
 	<div class="singers">
 		<div class="singer-tile s m l">
-			<img src="Lata Mangeshkar.jpg" class="item-img">
-			<div class="item-text">Lata Mangeshkar</div>
+			<img src="Lata Mangeshkar.jpg" class="singer-img">
+			<div class="singer-name">Lata Mangeshkar</div>
 		</div>
 		<div class="singer-tile s m l">
-			<img src="Kishore Kumar.jpg" class="item-img">
-			<div class="item-text">Kishore Kumar</div>
+			<img src="Kishore Kumar.jpg" class="singer-img">
+			<div class="singer-name">Kishore Kumar</div>
 		</div>
 		<div class="singer-tile s m l">
-			<img src="Shankar Mahadevan.jpg" class="item-img">
-			<div class="item-text">Shankar Mahadevan</div>
+			<img src="Shankar Mahadevan.jpg" class="singer-img">
+			<div class="singer-name">Shankar Mahadevan</div>
 		</div>
 		<div class="singer-tile s m l">
-			<img src="AR Rahman.jpg" class="item-img">
-			<div class="item-text">AR Rahman</div>
+			<img src="AR Rahman.jpg" class="singer-img">
+			<div class="singer-name">AR Rahman</div>
 		</div>
 		<div class="singer-tile s m l">
-			<img src="Sonu Nigam.jpg" class="item-img">
-			<div class="item-text">Sonu Nigam</div>
+			<img src="Sonu Nigam.jpg" class="singer-img">
+			<div class="singer-name">Sonu Nigam</div>
 		</div>
 		<div class="singer-tile s m l">
-			<img src="Shreya Ghosal.jpg" class="item-img">
-			<div class="item-text">Shreya Ghosal</div>
+			<img src="Shreya Ghosal.jpg" class="singer-img">
+			<div class="singer-name">Shreya Ghosal</div>
 		</div>
-	</div>
 	</div>
 	
 <div class="footer">
