Image text added

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 			<div class="singer-name">Sonu Nigam</div>
 		</div>
 		<div class="singer-tile s m l">
-			<img src="Shreya Ghosal.jpg" class="singer-img">
-			<div class="singer-name">Shreya Ghosal</div>
+			<img src="Shreya Ghoshal.jpg" class="singer-img">
+			<div class="singer-name">Shreya Ghoshal</div>
 		</div>
 	</div>
 	
